--- a/static/css/style_stock.css
+++ b/static/css/style_stock.css
@@ -1,6 +1,7 @@
 .container {
     text-align: center;
-    border: 5px solid green;
+    border: 5px;
+    /* border: 5px solid green */
     width: 100%;
     height: 50px;
     padding-top: 0px;
@@ -10,7 +11,8 @@
 .container2 {
     display: none;
     text-align: center;
-    border: 5px solid green;
+    border: 5px;
+    /* border: 5px solid green */
     left: 10%;
     width: 60%;
     height: auto;
@@ -75,3 +77,56 @@ tbody {
     flex-direction: column;
     width: 100%;
 } */
+
+table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 14px;
+    border-radius: 10px;
+    border-spacing: 0;
+    text-align: center;
+}
+
+th {
+    background: #A8C397;
+    color: white;
+    text-shadow: 0 1px 1px #2D2020;
+    padding: 10px 20px;
+}
+
+th,
+td {
+    border-style: solid;
+    border-width: 0 1px 1px 0;
+    border-color: white;
+}
+
+th:first-child,
+td:first-child {
+    text-align: left;
+}
+
+th:first-child {
+    border-top-left-radius: 10px;
+}
+
+th:last-child {
+    border-top-right-radius: 10px;
+    border-right: none;
+}
+
+td {
+    padding: 10px 20px;
+    background: #F8E391;
+}
+
+tr:last-child td:first-child {
+    border-radius: 0 0 0 10px;
+}
+
+tr:last-child td:last-child {
+    border-radius: 0 0 10px 0;
+}
+
+tr td:last-child {
+    border-right: none;
+}
