--- a/static/css/style_main_page.css
+++ b/static/css/style_main_page.css
@@ -3,32 +3,46 @@
     max-width: 2100px;
     padding: 20px 0px;
     margin: 0 auto;
+    border: 5px solid green;
 }
+
 .container:after {
     content: "";
     display: table;
     clear: both;
 }
 
-header {
+#header {
     width: 100%;
     height: 100px;
+    top: 0;
+    left: 0;
+    z-index: 9999;
     background-color: #A8C397;
     position: fixed;
+    padding: 10px;
+    border: 5px solid gold;
 }
 
 body {
     background-color: #F0EFC9;
 }
 
-*, ::after, ::before {
+*,
+::after,
+::before {
     box-sizing: border-box;
 }
 
-.main {
+#main {
+    position: absolute;
+    /* padding: 10px; */
+    top: 100px;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    /* position: relative; */
     background-color: #F0EFC9;
+    border: 5px solid red;
 }
 
 .logo_name {
@@ -59,7 +73,8 @@ nav ul {
 }
 
 nav li {
-    display: inline-block; /*один из способов разместить элементы в строку*/
+    display: inline-block;
+    /*один из способов разместить элементы в строку*/
     font-family: "Roboto", sans-serif;
 }
 
@@ -73,8 +88,8 @@ nav a {
 
 .stock {
     display: block;
+    /* top: 50%; */
     margin-top: 40px;
     margin-bottom: 40px;
     margin-left: 20px;
 }
-
