--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,24 +4,37 @@
 <head>
 	<meta charset="utf-8">
 	<title>Lemmings Company</title>
+	<link rel="icon" href="{{ url_for('static', filename='images/Lemming.png') }}" type="image/png" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style_main_page.css') }}">
 </head>
 
 <body>
 	<div id="header">
-		<img class="logo" src="Lemming.png" alt="Logo" width="50px" height="50px">
-		<h4 class="logo_name">Lemmings Company</h4>
-		<nav>
-			<ul>
-				<li><a class="catalog">Каталог</a></li>
-				<li><a class="news">Новости</a></li>
-			</ul>
-		</nav>
+		<div class="left_head">
+			<img class="logo" src="/logo" alt="Logo" width="50px" height="50px">
+			<h4 class="logo_name">Lemmings Company</h4>
+		</div>
+		<div class="right_head">
+			<nav>
+				<ul>
+					<li><a class="catalog" href="#Catalog">Каталог</a></li>
+					<li><a class="news">Новости</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
 	<div id="main">
-		{% for st in stock %}
-		<a class="stock" href="http://127.0.0.1:8080/company/sber">{{ st }}</a>
-		{% endfor %}
+		<h1 id="Catalog">Каталог</h1>
+		<div class="list_of_stocks">
+			{% for st in stock %}
+				<div class="stock_rec">
+					<img class="stock_logo" src="/img/sber" alt="sber" width="50px" height="50px">
+					<a class="stock_link" href="">{{ st }}</a>
+				</div>
+			{% endfor %}
+		</div>
 	</div>
+
 </body>
+
 </html>
