--- a/static/css/style_main_page.css
+++ b/static/css/style_main_page.css
@@ -12,18 +12,6 @@
     clear: both;
 }
 
-#header {
-    width: 100%;
-    height: 100px;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    background-color: #A8C397;
-    position: fixed;
-    padding: 10px;
-    border: 5px solid gold;
-}
-
 body {
     background-color: #F0EFC9;
 }
@@ -34,51 +22,71 @@ body {
     box-sizing: border-box;
 }
 
-#main {
-    position: absolute;
-    /* padding: 10px; */
-    top: 100px;
+#header {
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #A8C397;
+    position: fixed;
+    
+    border: 5px solid gold;
+    align-items: center;
     width: 100%;
-    /* height: 100%; */
-    /* position: relative; */
-    background-color: #F0EFC9;
-    border: 5px solid red;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+}
+
+.left_head {
+    float: left;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    border: 5px solid blue;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.right_head {
+    display: flex;
+    flex-direction: row-reverse;
+    border: 5px solid green;
+    float: right;
+    height: 100px;
+    width: 100%;
+    padding-right: 10px;
 }
 
 .logo_name {
     float: left;
-    display: inline;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: auto 10px;
 }
 
 .logo {
     float: left;
-    display: inline;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: auto 10px;
 }
 
 nav {
     float: right;
-    display: inline;
-    margin-right: 60px;
+    margin: auto 0;
 }
 
 nav ul {
-    margin: 0;
-    padding: 0;
+    float: right;
+    margin: auto 0;
     list-style: none;
-    display: inline;
 }
 
 nav li {
-    display: inline-block;
+    float: right;
+    margin: auto 10px;
     /*один из способов разместить элементы в строку*/
     font-family: "Roboto", sans-serif;
 }
 
 nav a {
+    float: right;
     text-decoration: none;
     line-height: 45px;
     font-size: 24px;
@@ -86,10 +94,68 @@ nav a {
     color: black;
 }
 
-.stock {
+/* Дальше идет стиль блоков акций */
+
+h1 {
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 60px;
+}
+
+.stock_link {
     display: block;
-    /* top: 50%; */
-    margin-top: 40px;
-    margin-bottom: 40px;
     margin-left: 20px;
+    text-decoration: none;
+    font-family: Roboto;
+    line-height: 45px;
+    font-size: 24px;
+    font-style: normal;
+    color: black;
+    /* top: 50%; */
+}
+
+.stock_logo {
+    display: block;
+    margin-left: 20px;
+}
+
+.stock_rec {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
+    height: 50px;
+    background-color: #E7E09E;
+    margin: 10px auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.list_of_stocks {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* padding: 10px;
+    top: 100px;
+    width: 100%; */
+    /* height: 100%; */
+    /* position: relative; */
+    /* background-color: #F0EFC9; */
+    border: 5px solid olive;
+    margin: auto;
+}
+
+#main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding: 10px; */
+    top: 100px;
+    width: 100%;
+    /* height: 100%; */
+    /* position: relative; */
+    background-color: #F0EFC9;
+    border: 5px solid red;
+    margin: 100px auto;
 }
