--- a/static/css/style_main_page.css
+++ b/static/css/style_main_page.css
@@ -1,26 +1,8 @@
-.container {
-    width: 100%;
-    max-width: 2100px;
-    padding: 20px 0px;
-    margin: 0 auto;
-    border: 5px solid green;
-}
-
-.container:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
 body {
     background-color: #F0EFC9;
 }
 
-*,
-::after,
-::before {
-    box-sizing: border-box;
-}
+/* header */
 
 #header {
     top: 0;
@@ -40,6 +22,8 @@ body {
 .left_head {
     float: left;
     display: flex;
+    align-items: center;
+    text-align: center;
     width: 100%;
     height: 100px;
     border: 5px solid blue;
@@ -50,6 +34,8 @@ body {
 .right_head {
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
+    text-align: center;
     border: 5px solid green;
     float: right;
     height: 100px;
@@ -67,31 +53,22 @@ body {
     margin: auto 10px;
 }
 
-nav {
-    float: right;
-    margin: auto 0;
-}
-
-nav ul {
-    float: right;
-    margin: auto 0;
-    list-style: none;
-}
-
-nav li {
-    float: right;
-    margin: auto 10px;
-    /*один из способов разместить элементы в строку*/
-    font-family: "Roboto", sans-serif;
-}
-
-nav a {
-    float: right;
+.right_head a {
+    display: inline-block;
     text-decoration: none;
-    line-height: 45px;
     font-size: 24px;
     font-style: normal;
     color: black;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+/* Ссылка на аккаунт */
+
+.account {
+    
 }
 
 /* Дальше идет стиль блоков акций */
