--- a/static/css/style_stock.css
+++ b/static/css/style_stock.css
@@ -1,32 +1,43 @@
 .container {
+    display: none;
     text-align: center;
-    border: 5px;
-    /* border: 5px solid green */
-    width: 100%;
-    height: 50px;
+    /* border: 5px; */
+    position: relative;
+    border: 5px solid black;
+    /* left: 1%; */
+    width: 47%;
+    height: auto;
     padding-top: 0px;
+    top: 150px;
+    background-color:#b8d5a5;
     align-items: center;
+    margin: 0 auto;
 }
 
 .container2 {
     display: none;
     text-align: center;
-    border: 5px;
-    /* border: 5px solid green */
-    left: 10%;
-    width: 60%;
+    /* border: 5px; */
+    position: relative;
+    border: 5px solid green;
+    /* left: 10%; */
+    width: 70%;
     height: auto;
     padding-top: 0px;
+    top: 200px;
     align-items: center;
     margin: 0 auto;
+    vertical-align: middle;
 }
 
 .btn {
     font-size: 30px;
-    /* border: none; */
+    border: 5px solid black;
     outline: none;
     background-color: #A8C397;
     color: black;
+    top: 200px;
+    position: relative;
     height: 100%;
     width: 60%;
     /* align-items: center; */
@@ -34,8 +45,23 @@
     margin: 0 auto;
     display: block;
 }
-
-.btn:hover {
+.btn2 {
+    font-size: 30px;
+    border: 5px solid black;
+    outline: none;
+    background-color: #A8C397;
+    color: black;
+    top: 150px;
+    position: relative;
+    height: 100%;
+    width: 60%;
+    left: 0%;
+    /* align-items: center; */
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+.btn:hover, .btn2:hover {
     /* TODO : поменять цвет */
     background: #E7E09E;
 }
@@ -129,4 +155,50 @@ tr:last-child td:last-child {
 
 tr td:last-child {
     border-right: none;
+}
+
+
+/* пупупу */
+#header {
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #A8C397;
+    position: fixed; 
+    /* border: 5px solid gold; */
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+}
+
+.left_head {
+    float: left;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    border: 5px solid blue;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.right_head {
+    display: flex;
+    flex-direction: row-reverse;
+    border: 5px solid green;
+    float: right;
+    height: 100px;
+    width: 100%;
+    padding-right: 10px;
+}
+
+.logo_name {
+    float: left;
+    margin: auto 10px;
+}
+
+.logo {
+    float: left;
+    margin: auto 10px;
 }
