--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="utf-8">
@@ -36,8 +36,8 @@
 		<div class="list_of_stocks">
 			{% for st in stock %}
 				<div class="stock_rec">
-					<img class="stock_logo" src="{{image}}" alt="sber" width="50px" height="50px">
-					<a class="stock_link" href="">{{ st }}</a>
+					<img class="stock_logo" src="{{st.fil}}" alt="{{st.fil}}" width="50px" height="50px">
+					<a class="stock_link" href="{{st.link}}">{{ st.name }}</a>
 				</div>
 			{% endfor %}
 		</div>
