--- a/templates/stock.html
+++ b/templates/stock.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title> Lemmings Company </title>
-    <link rel="icon" href="{{ url_for('static', filename='images/Lemming.png') }}" type="image/png" />
+    <link rel="icon" href="{{ url_for('static', filename='img/Lemming.png') }}" type="image/png" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style_stock.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -12,36 +12,25 @@
 <body>
     <div id="header">
 		<div class="left_head">
-			<img class="logo" src="{{logo}}" alt="Logo" width="50px" height="50px">
+			<a class="log" href="/"><img class="logo" src="{{ url_for('static', filename='img/Lemming.png') }}" alt="Logo" width="50px" height="50px"></a>
 			<h4 class="logo_name">Lemmings Company</h4>
 		</div>
 		<div class="right_head">
-			<!-- <nav>
-				<ul>
-					<nav>
-						<ul>
-							<li><a class="catalog" href="#Catalog">Каталог</a></li>
-							<li><a class="news">Новости</a></li>
-						</ul>
-					</nav>
-					<li><a class="account" href=""><img src="{{acc}}" width="50px" height="50px"></a></li>
-				</ul>
-			</nav> -->
-			<a class="account" href=""><img src="{{acc}}" width="50px" height="50px"></a>
+			<a class="account" href=""><img src="{{ url_for('static', filename='img/Account.png') }}" width="50px" height="50px"></a>
 			<a class="catalog" href="#Catalog">Каталог</a>
 			<a class="news">Новости</a>
 		</div>
 	</div>
     <div style="display: flex; justify-content: space-around; border: 5px solid gold;">
-        <img src="{{ url_for('static', filename='img/SBER.png') }}" style="border-radius: 100px; box-shadow: 0 0 0 3px green, 0 0 13px #333; top: 163px; width: 200px; height: 200px; position: relative; left: 50px;">
+        <img src="{{ url_for('static', filename='img/icon.png') }}" style="border-radius: 100px; box-shadow: 0 0 0 3px green, 0 0 13px #333; top: 163px; width: 200px; height: 200px; position: relative; left: 50px;">
         <button type="button" class="btn2">Описание </button>
         <div class="container">
-            Apple Inc. - американская компания, производитель персональных и планшетных компьютеров, аудиоплееров, телефонов, программного обеспечения. Одна из первых стала создавать персональные компьютеры и современные операционные системы. У компании очень грамотный маркетинг, который в паре с инновационными технологиями и узнаваемому дизайну сформировали культовый бренд. APPLE - первая американская компания, чья капитализация превысила 1 трлн долларов США. Это произошло во время торгов акциями компании в 2018 году. В январе 2022 года Apple стала первой компанией в мире, рыночная капитализация которой достигла 3 триллионов долларов США.
+            <p>{{ text }}</p>
         </div>
     </div>
-    <button type="button" class="btn">{{ name }} (id: {{ id }}) </button>
+    <button type="button" class="btn">Таблица операций {{ name }} (id: {{ id }}) </button>
     <div class="container2">
-        <img src="{{graph}}" alt="graphic">
+        <img class="graph" src="{{ url_for('static', filename='img/graphic.png') }}" alt="graphic">
         <table border="1" class="center">
             <thead>
                 <tr>
@@ -54,11 +43,11 @@
             </thead>
             <tbody>
                 {% for row in ticker %}
-                <tr>
-                    {% for item in row %}
-                    <td> {{ item }} </td>
-                    {% endfor %}
-                </tr>
+                    <tr>
+                        {% for item in row %}
+                            <td> {{ item }} </td>
+                        {% endfor %}
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
