--- a/static/css/style_stock.css
+++ b/static/css/style_stock.css
@@ -1,3 +1,69 @@
+
+/* header */
+
+#header {
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #A8C397;
+    position: fixed;
+    
+    border: 5px solid gold;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+}
+
+.left_head {
+    float: left;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100px;
+    border: 5px solid blue;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.right_head {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    text-align: center;
+    border: 5px solid green;
+    float: right;
+    height: 100px;
+    width: 100%;
+    padding-right: 10px;
+}
+
+.logo_name {
+    float: left;
+    margin: auto 10px;
+}
+
+.logo {
+    float: left;
+    margin: auto 10px;
+}
+
+.right_head a {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 24px;
+    font-style: normal;
+    color: black;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+/* end header */
+
 .container {
     display: none;
     text-align: center;
