--- a/templates/stock.html
+++ b/templates/stock.html
@@ -2,46 +2,44 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title> Lemmings Company </title>
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3745/3745273.png" type="image/png" />
+    <link rel="icon" href="{{ url_for('static', filename='img/Lemming.png') }}" type="image/png" />
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style_stock.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_stock.css') }}">
 </head>
 
 <body>
     <div id="header">
-        <div class="left_head">
-            <img class="logo" src="/logo" alt="Logo" width="50px" height="50px">
-            <h4 class="logo_name">Lemmings Company</h4>
-        </div>
-        <div class="right_head">
-            <nav>
-                <ul>
-                    <li><a class="catalog" href="#Catalog">Каталог</a></li>
-                    <li><a class="news">Новости</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-    <div style="display: flex; justify-content: space-around; border: 5px gold;">
-        <img src="{{ url_for('static', filename='img/SBER.png') }}"
-            style="border-radius: 100px; box-shadow: 0 0 0 3px green, 0 0 13px #333; top: 163px; width: 200px; height: 200px; position: relative; left: 50px;">
+		<div class="left_head">
+			<a class="log" href="/"><img class="logo" src="{{ url_for('static', filename='img/Lemming.png') }}" alt="Logo" width="50px" height="50px"></a>
+			<h4 class="logo_name">Lemmings Company</h4>
+		</div>
+		<div class="right_head">
+			<a class="account" href=""><img src="{{ url_for('static', filename='img/Account.png') }}" width="50px" height="50px"></a>
+			<a class="catalog" href="#Catalog">Каталог</a>
+			<a class="news">Новости</a>
+		</div>
+	</div>
+    <div style="display: flex; justify-content: space-around; border: 5px solid gold;">
+        <img src="{{ url_for('static', filename='img/icon.png') }}" style="border-radius: 100px; box-shadow: 0 0 0 3px green, 0 0 13px #333; top: 163px; width: 200px; height: 200px; position: relative; left: 50px;">
         <button type="button" class="btn2">Описание </button>
         <div class="container">
-            <p>
-                {{ description }}
-            </p>
+            <p>{{ text }}</p>
         </div>
     </div>
-    <div style="width: 100%; top: 200px; position: relative; align-items: center; left: 20%">
-        <img src="{{ url_for('static', filename='img/SBER.png') }}">
+    <div style="width: 100%; top: 200px; position: relative; align-items: center; left: 25%;">
+        <img src="{{ url_for('static', filename='img/graphic.png') }}">
     </div>
-    <button type="button" class="btn">{{ name }} (id: {{ id }}) </button>
+    <div style="height: 10px;"></div>
+    <button type="button" class="btn"> Совет бота </button>
     <div class="container2">
-        <div style="border: 5px solid purple;">
-            <h1>MEOW</h1>
-        </div>
+        <p>MEOW</p>
+    </div>
+    <div style="height: 10px;"></div>
+    <button type="button" class="btn">Таблица операций {{ name }} (id: {{ id }}) </button>
+    <div class="container2">
+        <!-- <img class="graph" src="{{ url_for('static', filename='img/graphic.png') }}" alt="graphic"> -->
         <table border="1" class="center">
             <thead>
                 <tr>
@@ -54,11 +52,11 @@
             </thead>
             <tbody>
                 {% for row in ticker %}
-                <tr>
-                    {% for item in row %}
-                    <td> {{ item }} </td>
-                    {% endfor %}
-                </tr>
+                    <tr>
+                        {% for item in row %}
+                            <td> {{ item }} </td>
+                        {% endfor %}
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
@@ -100,5 +98,4 @@
         }
     </script>
 </body>
-
 </html>
