--- a/static/css/style_stock2.css
+++ b/static/css/style_stock2.css
@@ -98,6 +98,7 @@
     align-items: center;
     margin: 0 auto;
     vertical-align: middle;
+    background-color:#b8d5a5;
 }
 
 .btn {
@@ -126,6 +127,21 @@
     height: 100%;
     width: 60%;
     left: 0%;
+    /* align-items: center; */
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+.btn3 {
+    font-size: 30px;
+    border: 5px solid black;
+    outline: none;
+    background-color: #A8C397;
+    color: black;
+    top: 200px;
+    position: relative;
+    height: 100%;
+    width: 60%;
     /* align-items: center; */
     text-align: center;
     margin: 0 auto;
