--- a/templates/stock.html
+++ b/templates/stock.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title> Lemmings Company </title>
+    <title> {{ name }} </title>
     <link rel="icon" href="{{ url_for('static', filename='img/Lemming.png') }}" type="image/png" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style_stock.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
