--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -18,6 +18,7 @@
 			<a class="account" href=""><img src="{{acc}}" width="50px" height="50px"></a>
 			<a class="catalog" href="#Catalog">Каталог</a>
 			<a class="news">Новости</a>
+			<a class="str" href="/yourstrategy">Ваша стратегия</a>
 		</div>
 	</div>
 	<div id="main">
