--- a/templates/stock2.html
+++ b/templates/stock2.html
@@ -19,6 +19,7 @@
 			<a class="account" href=""><img src="{{ url_for('static', filename='img/Account.png') }}" width="50px" height="50px"></a>
 			<a class="catalog" href="#Catalog">Каталог</a>
 			<a class="news">Новости</a>
+            <a class="str" href="/yourstrategy">Ваша стратегия</a>
 		</div>
 	</div>
     <div style="display: flex; 
@@ -41,19 +42,9 @@
         <img class="graph" src="{{ url_for('static', filename='img/graphic.png') }}">
     </div>
     <div style="height: 10px;"></div>
-    <button type="button" class="btn3"> Совет бота </button>
+    <button type="button" class="btn"> Совет бота </button>
     <div class="container2">
-        <img src="{{ url_for('static',filename='img/graphic.png')}}" width="50%">
-        <div style="display: block;
-        text-align: center;
-        position: relative;
-        width: 47%;
-        padding-top: 0px;
-        align-items: center;
-        margin: 0 auto;">
-            <p> {{text}} </p>
-        </div>
-
+        <p>MEOW</p>
     </div>
     <div style="height: 10px;"></div>
     <button type="button" class="btn">Таблица операций {{ name }} (id: {{ id }}) </button>
@@ -95,19 +86,6 @@
                     content.style.display = "none";
                 } else {
                     content.style.display = "block";
-                }
-            });
-        }
-        var coll = document.getElementsByClassName("btn3");
-        var i;
-        for (i = 0; i < coll.length; i++) {
-            coll[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var content = this.nextElementSibling;
-                if (content.style.display === "flex") {
-                    content.style.display = "none";
-                } else {
-                    content.style.display = "flex";
                 }
             });
         }
